@@ -15,6 +15,7 @@ import com.nect.core.entity.notifications.enums.NotificationScope;
 import com.nect.core.entity.notifications.enums.NotificationType;
 import com.nect.core.entity.team.ProjectUser;
 import com.nect.core.entity.team.enums.DocumentType;
+import com.nect.core.entity.team.enums.FileExt;
 import com.nect.core.entity.team.history.enums.HistoryAction;
 import com.nect.core.entity.team.history.enums.HistoryTargetType;
 import com.nect.core.entity.team.Project;
@@ -22,7 +23,6 @@ import com.nect.core.entity.team.SharedDocument;
 import com.nect.core.entity.team.process.*;
 import com.nect.core.entity.team.process.Process;
 import com.nect.core.entity.team.process.enums.AssignmentRole;
-import com.nect.core.entity.team.process.enums.ProcessFeedbackStatus;
 import com.nect.core.entity.team.process.enums.ProcessStatus;
 import com.nect.core.entity.team.process.enums.ProcessType;
 import com.nect.core.entity.user.User;
@@ -31,10 +31,7 @@ import com.nect.core.repository.team.ProjectRepository;
 import com.nect.core.repository.team.ProjectTeamRoleRepository;
 import com.nect.core.repository.team.ProjectUserRepository;
 import com.nect.core.repository.team.SharedDocumentRepository;
-import com.nect.core.repository.team.process.ProcessFeedbackRepository;
-import com.nect.core.repository.team.process.ProcessLaneOrderRepository;
-import com.nect.core.repository.team.process.ProcessMentionRepository;
-import com.nect.core.repository.team.process.ProcessRepository;
+import com.nect.core.repository.team.process.*;
 import com.nect.core.repository.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -60,9 +57,12 @@ public class ProcessService {
     private final ProcessLaneOrderRepository processLaneOrderRepository;
     private final ProjectTeamRoleRepository projectTeamRoleRepository;
     private final ProcessFeedbackRepository processFeedbackRepository;
+    private final ProcessSharedDocumentRepository processSharedDocumentRepository;
 
     private final S3Service s3Service;
     private final ProcessLaneOrderService processLaneOrderService;
+    private final NotificationFacade notificationFacade;
+    private final ProjectHistoryPublisher historyPublisher;
 
     private static final String TEAM_LANE_KEY = "TEAM";
 
@@ -104,9 +104,6 @@ public class ProcessService {
             }
         }
     }
-
-    private final NotificationFacade notificationFacade;
-    private final ProjectHistoryPublisher historyPublisher;
 
     // 헬퍼 메서드
     private void assertActiveProjectMember(Long projectId, Long userId) {
@@ -406,6 +403,7 @@ public class ProcessService {
         Process process = Process.builder()
                 .project(project)
                 .createdBy(writer)
+                .updatedBy(writer)
                 .title(req.processTitle())
                 .content(req.processContent())
                 .build();
@@ -566,27 +564,10 @@ public class ProcessService {
         /*
          * HISTORY: Process 생성 완료 후 이벤트 발행
          * - 저장은 HistoryEventHandler가 AFTER_COMMIT 시점에 수행(트랜잭션 성공 시에만 기록)
-         * - metaJson에는 생성 시점 핵심 스냅샷(title/status/period)만 담는다.
+         * - metaJson에는 생성 시점 핵심 스냅샷만 담는다.
          * */
         Map<String, Object> meta = new LinkedHashMap<>();
-        meta.put("title", saved.getTitle());
-        meta.put("status", saved.getStatus());
-        meta.put("startAt", saved.getStartAt());
-        meta.put("endAt", saved.getEndAt());
-        meta.put("roleFields", roleFields);
-        meta.put("customFieldName", roleFields.contains(RoleField.CUSTOM) ? customName : null);
-        meta.put("assigneeIds", assigneeIds);
-        meta.put("mentionUserIds", mentionIds);
-        meta.put("fileIds", fileIds);
-        List<Map<String, String>> linkMetas = links.stream()
-                .filter(Objects::nonNull)
-                .map(l -> Map.of(
-                        "title", l.title() == null ? "" : l.title().trim(),
-                        "url", l.url() == null ? "" : l.url().trim()
-                ))
-                .toList();
-
-        meta.put("links", linkMetas);
+        meta.put("processTitle", saved.getTitle());
 
         historyPublisher.publish(
                 projectId,
@@ -819,6 +800,23 @@ public class ProcessService {
                 })
                 .toList();
 
+        User writer = process.getCreatedBy();
+        User lastEditor = (process.getUpdatedBy() != null) ? process.getUpdatedBy() : writer;
+
+        ProjectUser writerMember = projectUserRepository
+                .findByUserIdAndProject(writer.getUserId(), process.getProject())
+                .orElseThrow(() -> new ProcessException(
+                        ProcessErrorCode.INVALID_REQUEST,
+                        "writer must be active project member. projectId=" + projectId + ", userId=" + writer.getUserId()
+                ));
+
+        ProjectUser editorMember = null;
+        try {
+            editorMember = projectUserRepository
+                    .findByUserIdAndProject(lastEditor.getUserId(), process.getProject())
+                    .orElse(null);
+        } catch (Exception ignored) {}
+
         return new ProcessDetailResDto(
                 process.getId(),
                 process.getTitle(),
@@ -834,6 +832,20 @@ public class ProcessService {
                 taskItems,
                 feedbacks,
                 attachments,
+                new ProcessDetailResDto.WriterDto(
+                        writer.getUserId(),
+                        writer.getName(),
+                        writer.getNickname(),
+                        writerMember.getRoleField(),
+                        writerMember.getCustomRoleFieldName()
+                ),
+                new ProcessDetailResDto.LastEditedByDto(
+                        lastEditor.getUserId(),
+                        lastEditor.getName(),
+                        lastEditor.getNickname(),
+                        (editorMember == null) ? null : editorMember.getRoleField(),
+                        (editorMember == null) ? null : editorMember.getCustomRoleFieldName()
+                ),
                 process.getCreatedAt(),
                 process.getUpdatedAt(),
                 process.getDeletedAt()
@@ -908,6 +920,9 @@ public class ProcessService {
                         ProcessErrorCode.PROCESS_NOT_FOUND,
                         "projectId=" + projectId + ", processId=" + processId
                 ));
+
+        User actor = userRepository.findById(userId)
+                .orElseThrow(() -> new ProcessException(ProcessErrorCode.INVALID_REQUEST, "userId=" + userId));
 
 
         // before 스냅샷
@@ -1063,9 +1078,6 @@ public class ProcessService {
                     .toList();
 
             if (!addedMentionIds.isEmpty()) {
-                User actor = userRepository.findById(userId)
-                        .orElseThrow(() -> new ProcessException(ProcessErrorCode.INVALID_REQUEST, "userId=" + userId));
-
                 List<User> receivers = validateAndLoadMentionReceivers(projectId, userId, addedMentionIds);
 
                 notifyWorkspaceMention(
@@ -1260,23 +1272,8 @@ public class ProcessService {
          * */
         if (!changed.isEmpty()) {
             Map<String, Object> meta = new LinkedHashMap<>();
-            meta.put("changed", changed);
-            meta.put("before", Map.of(
-                    "title", beforeTitle,
-                    "content", beforeContent,
-                    "status", beforeStatus,
-                    "startAt", beforeStart,
-                    "endAt", beforeEnd,
-                    "mentionUserIds", beforeMentionIds
-            ));
-            meta.put("after", Map.of(
-                    "title", afterTitle,
-                    "content", afterContent,
-                    "status", afterStatus,
-                    "startAt", afterStart,
-                    "endAt", afterEnd,
-                    "mentionUserIds", (afterMentionIds != null ? afterMentionIds : beforeMentionIds)
-            ));
+            meta.put("processTitle", process.getTitle());
+            meta.put("changedKeys", changed.keySet());
 
             historyPublisher.publish(
                     projectId,
@@ -1288,6 +1285,10 @@ public class ProcessService {
             );
         }
 
+        if (changed.isEmpty()) {
+            throw new ProcessException(ProcessErrorCode.INVALID_REQUEST, "no changes");
+        }
+
         User writer = process.getCreatedBy();
 
         ProjectUser writerMember = projectUserRepository
@@ -1295,6 +1296,14 @@ public class ProcessService {
                 .orElseThrow(() -> new ProcessException(
                         ProcessErrorCode.INVALID_REQUEST,
                         "writer must be active project member. projectId=" + projectId + ", userId=" + writer.getUserId()
+                ));
+
+        // 마지막 수정자
+        ProjectUser editorMember = projectUserRepository
+                .findByUserIdAndProject(actor.getUserId(), process.getProject())
+                .orElseThrow(() -> new ProcessException(
+                        ProcessErrorCode.INVALID_REQUEST,
+                        "editor must be active project member. projectId=" + projectId + ", userId=" + actor.getUserId()
                 ));
 
         return new ProcessBasicUpdateResDto(
@@ -1316,6 +1325,13 @@ public class ProcessService {
                         writer.getNickname(),
                         writerMember.getRoleField(),
                         writerMember.getCustomRoleFieldName()
+                ),
+                new ProcessBasicUpdateResDto.LastEditedByDto(
+                        actor.getUserId(),
+                        actor.getName(),
+                        actor.getNickname(),
+                        editorMember.getRoleField(),
+                        editorMember.getCustomRoleFieldName()
                 )
         );
 
@@ -1397,20 +1413,43 @@ public class ProcessService {
         process.softDeleteCascade();
 
         processMentionRepository.softDeleteAllByProcessId(process.getId(), java.time.LocalDateTime.now());
+    }
 
-        Map<String, Object> meta = new LinkedHashMap<>();
-        meta.put("title", beforeTitle);
-        meta.put("status", beforeStatus);
-        meta.put("deletedAt", process.getDeletedAt());
+    private Map<Long, AttachmentSummaryDto> buildAttachmentSummaryMap(List<Long> processIds) {
+        if (processIds == null || processIds.isEmpty()) return Map.of();
 
-        historyPublisher.publish(
-                projectId,
-                userId,
-                HistoryAction.PROCESS_DELETED,
-                HistoryTargetType.PROCESS,
-                process.getId(),
-                meta
-        );
+        var rows = processSharedDocumentRepository.aggregateAttachmentsByProcessIds(processIds);
+
+        Map<Long, Long> fileCount = new HashMap<>();
+        Map<Long, Long> linkCount = new HashMap<>();
+        Map<Long, LinkedHashSet<FileExt>> extSet = new HashMap<>();
+
+        for (var r : rows) {
+            Long pid = r.getProcessId();
+            DocumentType type = r.getDocumentType();
+            FileExt ext = r.getFileExt();
+            long cnt = (r.getCnt() == null) ? 0L : r.getCnt();
+
+            if (type == DocumentType.LINK) {
+                linkCount.put(pid, linkCount.getOrDefault(pid, 0L) + cnt);
+            } else { // FILE
+                fileCount.put(pid, fileCount.getOrDefault(pid, 0L) + cnt);
+                if (ext != null) {
+                    extSet.computeIfAbsent(pid, k -> new LinkedHashSet<>()).add(ext);
+                }
+            }
+        }
+
+        Map<Long, AttachmentSummaryDto> out = new HashMap<>();
+        for (Long pid : processIds) {
+            long f = fileCount.getOrDefault(pid, 0L);
+            long l = linkCount.getOrDefault(pid, 0L);
+
+            List<FileExt> exts = extSet.getOrDefault(pid, new LinkedHashSet<>()).stream().toList();
+
+            out.put(pid, new AttachmentSummaryDto(f + l, f, l, exts));
+        }
+        return out;
     }
 
     private LocalDate normalizeWeekStart(LocalDate date) {
@@ -1420,7 +1459,12 @@ public class ProcessService {
         return date.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
     }
 
-    private ProcessCardResDto toProcessCardResDTO(Process p,  boolean hasOpenFeedback) {
+    private ProcessCardResDto toProcessCardResDTO(
+            Process p,
+            boolean hasOpenFeedback,
+            AttachmentSummaryDto attachmentSummary,
+            List<AttachmentMetaDto> attachmentsMeta
+    ) {
         int whole = (p.getTaskItems() == null) ? 0 : p.getTaskItems().size();
         int done = (p.getTaskItems() == null) ? 0 : (int) p.getTaskItems().stream()
                 .filter(ProcessTaskItem::isDone)
@@ -1432,7 +1476,7 @@ public class ProcessService {
                 .filter(pf -> pf.getDeletedAt() == null)
                 .map(ProcessField::getRoleField)
                 .filter(Objects::nonNull)
-                .filter(rf -> rf != RoleField.CUSTOM) // 커스텀은 별도 리스트로
+                .filter(rf -> rf != RoleField.CUSTOM)
                 .distinct()
                 .toList();
 
@@ -1452,8 +1496,7 @@ public class ProcessService {
                 .map(pu -> {
                     User u = pu.getUser();
                     String profileUrl = (u == null) ? null : toPresignedUserImage(u.getProfileImageName());
-                    String nickname = u.getNickname();
-                    return new AssigneeResDto(u.getUserId(), u.getName(), nickname, profileUrl);
+                    return new AssigneeResDto(u.getUserId(), u.getName(), u.getNickname(), profileUrl);
                 })
                 .toList();
 
@@ -1472,8 +1515,51 @@ public class ProcessService {
                 customFields,
                 missionNumber,
                 hasOpenFeedback,
-                assignees
+                assignees,
+                (attachmentSummary == null ? AttachmentSummaryDto.empty() : attachmentSummary),
+                (attachmentsMeta == null ? List.of() : attachmentsMeta)
         );
+    }
+
+    private Map<Long, List<AttachmentMetaDto>> buildAttachmentMetaMap(List<Long> processIds) {
+        if (processIds == null || processIds.isEmpty()) return Map.of();
+
+        var rows = processSharedDocumentRepository.findAttachmentMetasByProcessIds(processIds);
+
+        Map<Long, List<AttachmentMetaDto>> out = new HashMap<>();
+
+        for (var r : rows) {
+            Long pid = r.getProcessId();
+            if (pid == null) continue;
+
+            AttachmentType type = (r.getDocumentType() == DocumentType.LINK)
+                    ? AttachmentType.LINK
+                    : AttachmentType.FILE;
+
+            LocalDateTime attachedAt = (r.getAttachedAt() != null)
+                    ? r.getAttachedAt()
+                    : r.getCreatedAt();
+
+            AttachmentMetaDto dto = new AttachmentMetaDto(
+                    type,
+                    r.getDocumentId(),
+                    attachedAt,
+                    r.getFileExt() // LINK면 null 가능
+            );
+
+            out.computeIfAbsent(pid, k -> new ArrayList<>()).add(dto);
+        }
+
+        // attachedAt desc 정렬 (원하는 정책)
+        out.replaceAll((pid, list) ->
+                list.stream()
+                        .sorted(Comparator.comparing(
+                                (AttachmentMetaDto m) -> m.attachedAt() == null ? LocalDateTime.MIN : m.attachedAt()
+                        ).reversed())
+                        .toList()
+        );
+
+        return out;
     }
 
     private Integer calcLeftDay(LocalDate deadLine) {
@@ -1603,19 +1689,33 @@ public class ProcessService {
         List<Process> processes = processRepository.findAllInRangeOrdered(projectId, rangeStart, rangeEnd);
         if (processes == null) processes = List.of();
 
-        Set<Long> openFeedbackProcessIds = new HashSet<>();
-        if (!processes.isEmpty()) {
+        final Set<Long> openFeedbackProcessIds;
+        final Map<Long, AttachmentSummaryDto> attachmentSummaryMap;
+        final Map<Long, List<AttachmentMetaDto>> attachmentMetaMap;
+
+        if (processes.isEmpty()) {
+            openFeedbackProcessIds = Set.of();
+            attachmentSummaryMap = Map.of();
+            attachmentMetaMap = Map.of();
+        } else {
             List<Long> processIds = processes.stream()
                     .map(Process::getId)
                     .filter(Objects::nonNull)
                     .toList();
 
-            if (!processIds.isEmpty()) {
-                openFeedbackProcessIds.addAll(
-                        processFeedbackRepository.findOpenFeedbackProcessIds(processIds)
-                );
-            }
+            openFeedbackProcessIds = processIds.isEmpty()
+                    ? Set.of()
+                    : new HashSet<>(processFeedbackRepository.findOpenFeedbackProcessIds(processIds));
+
+            attachmentSummaryMap = processIds.isEmpty()
+                    ? Map.of()
+                    : buildAttachmentSummaryMap(processIds);
+
+            attachmentMetaMap = processIds.isEmpty()
+                    ? Map.of()
+                    : buildAttachmentMetaMap(processIds);
         }
+
 
         // 프로세스를 주차별로 묶기
         // startAt이 null이면 rangeStart 주로 보내거나, common 처리 가능
@@ -1644,7 +1744,9 @@ public class ProcessService {
                     List<ProcessCardResDto> cards = entry.getValue().stream()
                             .map(p -> {
                                 boolean hasOpenFeedback = openFeedbackProcessIds.contains(p.getId());
-                                return toProcessCardResDTO(p, hasOpenFeedback);
+                                AttachmentSummaryDto summary = attachmentSummaryMap.getOrDefault(p.getId(), AttachmentSummaryDto.empty());
+                                List<AttachmentMetaDto> metas = attachmentMetaMap.getOrDefault(p.getId(), List.of());
+                                return toProcessCardResDTO(p, hasOpenFeedback, summary, metas);
                             })
                             .toList();
 
@@ -1727,7 +1829,7 @@ public class ProcessService {
          */
 
         // lane 대상 프로세스 목록
-        List<Process> laneProcesses = List.of();
+        List<Process> laneProcesses;
 
         if (TEAM_LANE_KEY.equals(dbLaneKey)) { // 팀(전체)
             laneProcesses = processRepository.findAllForTeamBoard(projectId);
@@ -1746,25 +1848,40 @@ public class ProcessService {
             throw new ProcessException(ProcessErrorCode.INVALID_REQUEST, "invalid lane_key prefix. laneKey=" + laneKey);
         }
 
-        Set<Long> openFeedbackProcessIds = Collections.emptySet();
-        if (laneProcesses != null && !laneProcesses.isEmpty()) {
+        if (laneProcesses == null) laneProcesses = List.of();
+
+        final Set<Long> openFeedbackProcessIds;
+        final Map<Long, AttachmentSummaryDto> attachmentSummaryMap;
+        final Map<Long, List<AttachmentMetaDto>> attachmentMetaMap;
+
+        if (laneProcesses.isEmpty()) {
+            openFeedbackProcessIds = Set.of();
+            attachmentSummaryMap = Map.of();
+            attachmentMetaMap = Map.of();
+        } else {
             List<Long> processIds = laneProcesses.stream()
                     .map(Process::getId)
                     .filter(Objects::nonNull)
                     .toList();
 
-            if (!processIds.isEmpty()) {
-                openFeedbackProcessIds = new HashSet<>(
-                        processFeedbackRepository.findOpenFeedbackProcessIds(processIds)
-                );
-            }
+            openFeedbackProcessIds = processIds.isEmpty()
+                    ? Set.of()
+                    : new HashSet<>(processFeedbackRepository.findOpenFeedbackProcessIds(processIds));
+
+            attachmentSummaryMap = processIds.isEmpty()
+                    ? Map.of()
+                    : buildAttachmentSummaryMap(processIds);
+
+            attachmentMetaMap = processIds.isEmpty()
+                    ? Map.of()
+                    : buildAttachmentMetaMap(processIds);
         }
 
         List<ProcessStatusGroupResDto> groups = List.of(
-                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.PLANNING, laneProcesses, openFeedbackProcessIds),
-                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.IN_PROGRESS, laneProcesses, openFeedbackProcessIds),
-                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.DONE, laneProcesses, openFeedbackProcessIds),
-                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.BACKLOG, laneProcesses, openFeedbackProcessIds)
+                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.PLANNING, laneProcesses, openFeedbackProcessIds, attachmentSummaryMap, attachmentMetaMap),
+                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.IN_PROGRESS, laneProcesses, openFeedbackProcessIds, attachmentSummaryMap, attachmentMetaMap),
+                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.DONE, laneProcesses, openFeedbackProcessIds, attachmentSummaryMap, attachmentMetaMap),
+                buildStatusGroupOrdered(projectId, dbLaneKey, ProcessStatus.BACKLOG, laneProcesses, openFeedbackProcessIds, attachmentSummaryMap, attachmentMetaMap)
         );
 
         return new ProcessPartResDto(toApiLaneKey(dbLaneKey), groups);
@@ -1775,32 +1892,30 @@ public class ProcessService {
             String laneKey,
             ProcessStatus status,
             List<Process> laneProcessesAll,
-            Set<Long> openFeedbackProcessIds
+            Set<Long> openFeedbackProcessIds,
+            Map<Long, AttachmentSummaryDto> attachmentSummaryMap,
+            Map<Long, List<AttachmentMetaDto>> attachmentMetaMap
     ) {
-        // 해당 status인 프로세스만
         List<Process> laneProcesses = laneProcessesAll.stream()
                 .filter(p -> p.getStatus() == status)
                 .toList();
 
-        // order row 없으면 생성 (tail 부여)
-        processLaneOrderService.ensureLaneOrderRowsExistWriteTx(
-                projectId, status, laneKey, laneProcesses
-        );
+        processLaneOrderService.ensureLaneOrderRowsExistWriteTx(projectId, status, laneKey, laneProcesses);
 
-        // order row 기준 processId 순서 확보
         List<ProcessLaneOrder> orders = processLaneOrderRepository.findLaneOrders(projectId, laneKey, status);
         List<Long> orderedIds = orders.stream().map(o -> o.getProcess().getId()).toList();
 
-        // 혹시라도 (order에는 있는데 laneProcesses에는 없는) 케이스 방어
-        // laneProcesses 기준으로 map
-        Map<Long, Process> map = laneProcesses.stream().collect(Collectors.toMap(Process::getId, p -> p));
+        Map<Long, Process> map = laneProcesses.stream()
+                .collect(Collectors.toMap(Process::getId, p -> p));
 
         List<ProcessCardResDto> cards = new ArrayList<>();
         for (Long id : orderedIds) {
             Process p = map.get(id);
             if (p != null) {
                 boolean hasOpenFeedback = openFeedbackProcessIds.contains(p.getId());
-                cards.add(toProcessCardResDTO(p, hasOpenFeedback));
+                AttachmentSummaryDto summary = attachmentSummaryMap.getOrDefault(p.getId(), AttachmentSummaryDto.empty());
+                List<AttachmentMetaDto> metas = attachmentMetaMap.getOrDefault(p.getId(), List.of());
+                cards.add(toProcessCardResDTO(p, hasOpenFeedback, summary, metas));
             }
         }
 
@@ -1925,13 +2040,6 @@ public class ProcessService {
 
         // 변경 전 스냅샷
         ProcessStatus beforeStatus = process.getStatus();
-        // beforeOrder: lane_order 기준 (없으면 null)
-        Integer beforeOrder = processLaneOrderRepository
-                .findByProjectIdAndProcessIdAndLaneKeyAndStatusAndDeletedAtIsNull(projectId, processId, dbLaneKey, beforeStatus)
-                .map(ProcessLaneOrder::getSortOrder)
-                .orElse(null);
-        LocalDate beforeStart = process.getStartAt();
-        LocalDate beforeEnd = process.getEndAt();
 
         // 기간 변경
         LocalDate newStart = req.startDate();
@@ -2038,38 +2146,6 @@ public class ProcessService {
         LocalDate afterStart = process.getStartAt();
         LocalDate afterEnd = process.getEndAt();
 
-        boolean changed =
-                (beforeStatus != afterStatus) ||
-                        !java.util.Objects.equals(beforeOrder, afterOrder) ||
-                        !java.util.Objects.equals(beforeStart, afterStart) ||
-                        !java.util.Objects.equals(beforeEnd, afterEnd);
-
-        if (changed) {
-            java.util.Map<String, Object> meta = new java.util.LinkedHashMap<>();
-            meta.put("before", java.util.Map.of(
-                    "status", beforeStatus,
-                    "statusOrder", beforeOrder,
-                    "startAt", beforeStart,
-                    "endAt", beforeEnd
-            ));
-            meta.put("after", java.util.Map.of(
-                    "status", afterStatus,
-                    "statusOrder", afterOrder,
-                    "startAt", afterStart,
-                    "endAt", afterEnd
-            ));
-            meta.put("laneKey", apiLaneKeyForHistory);
-            meta.put("orderedProcessIds", orderedIds);
-
-            historyPublisher.publish(
-                    projectId,
-                    userId,
-                    HistoryAction.PROCESS_REORDERED,
-                    HistoryTargetType.PROCESS,
-                    processId,
-                    meta
-            );
-        }
 
         return new ProcessOrderUpdateResDto(
                 processId,
@@ -2340,19 +2416,6 @@ public class ProcessService {
         }
 
         process.updateStatus(after);
-
-        Map<String, Object> meta = new LinkedHashMap<>();
-        meta.put("beforeStatus", before);
-        meta.put("afterStatus", after);
-
-        historyPublisher.publish(
-                projectId,
-                userId,
-                HistoryAction.PROCESS_STATUS_CHANGED,
-                HistoryTargetType.PROCESS,
-                process.getId(),
-                meta
-        );
 
         return new ProcessStatusUpdateResDto(
                 process.getId(),
